Input pra criação de caronas na zona 'outros'

--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -3607,7 +3607,7 @@ FOTO</string>
                                                     </mask>
                                                 </variation>
                                                 <variation key="widthClass=compact" misplaced="YES">
-                                                    <rect key="frame" x="15" y="267" width="370" height="151"/>
+                                                    <rect key="frame" x="15" y="267" width="370" height="150.5"/>
                                                     <mask key="subviews">
                                                         <include reference="qjM-je-3ke"/>
                                                         <include reference="Gfe-eh-A7H"/>
@@ -3751,7 +3751,7 @@ FOTO</string>
                                                     </mask>
                                                 </variation>
                                                 <variation key="widthClass=compact" misplaced="YES">
-                                                    <rect key="frame" x="15" y="443" width="370" height="84"/>
+                                                    <rect key="frame" x="15" y="442" width="370" height="84"/>
                                                     <mask key="subviews">
                                                         <include reference="ftJ-lK-bEs"/>
                                                         <include reference="1W7-OK-GJ3"/>
@@ -3819,7 +3819,7 @@ FOTO</string>
                                                     </mask>
                                                 </variation>
                                                 <variation key="widthClass=compact" misplaced="YES">
-                                                    <rect key="frame" x="15" y="532" width="370" height="50"/>
+                                                    <rect key="frame" x="15" y="531" width="370" height="50"/>
                                                     <mask key="subviews">
                                                         <include reference="K8h-kP-2X5"/>
                                                         <include reference="P3j-hD-d2F"/>
@@ -4046,7 +4046,7 @@ FOTO</string>
                                                     </mask>
                                                 </variation>
                                                 <variation key="widthClass=compact" misplaced="YES">
-                                                    <rect key="frame" x="15" y="592" width="370" height="165"/>
+                                                    <rect key="frame" x="15" y="591" width="370" height="165"/>
                                                     <mask key="subviews">
                                                         <include reference="q8t-lO-Jqk"/>
                                                         <include reference="ZA1-8O-6ah"/>
@@ -4183,7 +4183,7 @@ FOTO</string>
                                             </mask>
                                         </variation>
                                         <variation key="widthClass=compact" misplaced="YES">
-                                            <rect key="frame" x="0.0" y="0.0" width="400" height="772"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="400" height="771.5"/>
                                             <mask key="subviews">
                                                 <include reference="wC6-CD-nF5"/>
                                                 <include reference="NpW-3h-cia"/>
@@ -5358,6 +5358,7 @@ FOTO</string>
                     </tableView>
                     <connections>
                         <segue destination="J0r-pk-iNO" kind="show" identifier="ViewNeighborhoods" id="C49-6K-JUo"/>
+                        <segue destination="bIR-ED-lkc" kind="show" identifier="OtherNeighborhood" id="eXf-VH-5Uy"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9pn-Vg-apO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -6854,7 +6855,81 @@ FOTO</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HfW-YK-U8Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6961.5" y="-230"/>
+            <point key="canvasLocation" x="6952.5" y="-715"/>
+        </scene>
+        <!--Outra região-->
+        <scene sceneID="Ngx-fw-xcD">
+            <objects>
+                <viewController id="bIR-ED-lkc" customClass="ZoneSelectionInputViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EQH-gW-bpa"/>
+                        <viewControllerLayoutGuide type="bottom" id="pcA-fx-kaF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="27z-nz-vnk">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite o nome do bairro" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xyj-Wb-gUe" customClass="CaronaeTextField">
+                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="WI9-5m-6hu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="WI9-5m-6hu"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="85" width="360" height="40"/>
+                                    <mask key="constraints">
+                                        <include reference="WI9-5m-6hu"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xyj-Wb-gUe" firstAttribute="leading" secondItem="27z-nz-vnk" secondAttribute="leadingMargin" id="N7e-TU-NJg"/>
+                            <constraint firstItem="xyj-Wb-gUe" firstAttribute="trailing" secondItem="27z-nz-vnk" secondAttribute="trailingMargin" id="Tlt-56-GPJ"/>
+                            <constraint firstItem="xyj-Wb-gUe" firstAttribute="top" secondItem="EQH-gW-bpa" secondAttribute="bottom" constant="20" id="XdK-88-XFQ"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="xyj-Wb-gUe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="N7e-TU-NJg"/>
+                                <exclude reference="Tlt-56-GPJ"/>
+                                <exclude reference="XdK-88-XFQ"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="xyj-Wb-gUe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="N7e-TU-NJg"/>
+                                <include reference="Tlt-56-GPJ"/>
+                                <include reference="XdK-88-XFQ"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="Outra região" id="gDJ-G5-v5a">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="bir-V2-KAd">
+                            <connections>
+                                <action selector="didTapDoneButton:" destination="bIR-ED-lkc" id="Rbk-1E-0fW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="doneButton" destination="gDJ-G5-v5a" id="EeP-JU-xxO"/>
+                        <outlet property="neighborhoodTextField" destination="xyj-Wb-gUe" id="U6Y-Ed-Odk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9bs-Ip-D6b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6952.5" y="244"/>
         </scene>
         <!--Todas-->
         <scene sceneID="Xc9-LH-XMn">
